--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "devDependencies": {
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "ethers": "^5.0.0",
+    "hardhat": "^2.6.8",
+    "@openzeppelin/contracts": "^4.4.0",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.27"
   }
 }
